<resources>
    <string name="app_name">Numnitio</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="account">Create an Account</string>
    <string name="signout">Sign Out</string>
    <string name="img">New Image</string>
    <string name="prevImg">Previous Images</string>
    <string name="todo">What would you like to do?</string>
</resources>
