<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/numnitio" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome, User!"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvToDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bNewImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/img"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/bPrevImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prevImg"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="30dp"/>


    <Button
        android:id="@+id/bSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="30dp"/>
</LinearLayout>